@@ -1,3 +1,7 @@
+2002-01-31  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* inflate.c: support raw deflate without zlib header
+
 2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02955] compression_decoders error message
@@ -2468,4 +2472,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.282 2002/01/31 09:43:14 ukai Exp $
+$Id: ChangeLog,v 1.283 2002/01/31 14:03:49 ukai Exp $
